// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLegacy Component FormLegacy renders with description and sections 1`] = `
<div>
  <div
    class="col"
  >
    <div
      class="header collapsible"
    >
      <h2
        class="typography h2"
      >
        Title
      </h2>
      <i
        class="icon icon open"
        icon="fal,chevron-left"
      />
    </div>
    <div
      aria-hidden="false"
      class="body"
      id="react-collapsed-panel-1"
      style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
    >
      <div
        class="col"
      />
    </div>
    <hr
      class="footer"
    />
    <div
      class="row"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`FormLegacy Component FormLegacy renders with mandatory field 1`] = `
<div>
  <div
    class="col"
  >
    <div
      class="fieldGroup"
    >
      <label
        class="label"
      >
        Number
        <span
          class="mandatory"
        >
          *
        </span>
      </label>
      <input
        autocomplete="off"
        class="default"
        inputmode="numeric"
        name="number"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`FormLegacy Component FormLegacy renders without validation schema 1`] = `
<div>
  <div
    class="col"
  >
    <div
      class="fieldGroup"
    >
      <label
        class="label"
      >
        Number
      </label>
      <input
        autocomplete="off"
        class="default"
        inputmode="numeric"
        name="number"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
